with Password Safe version 3.12. For a short description of Password
Safe, please see the accompanying README.txt file. For more
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to previous
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.12
==================
[1855658, 1436850] Implement font for password display correctly.
[1849830] Help now works properly for Manage->Option, displaying the
relevant topic.
[1849818] Browse-to would occasionally falsely report "failed to
browse to URL".
[1843631] "Browse to Icon" now correctly shown using new Toolbar.
[1841525] Increasing the number of passwords saved no longer deletes the
existing Password History.
[1670193] Allow use of Windows Common Controls V6 with Vista.
[] Pressing a character in the List view will now jump to the next entry
with text beginning with that character in the second column. This
is a change from previous behaviour which only looked in the first column,
now occupied by the icon.  This now follows MS's approach that if characters
are typed fast enough (within 1 second), it will treat them as a string
i.e. 'a' followed by 'b' will look for entry starting 'ab' etc.
[] Allow Expand/Collapse for R/O databases via toolbar.
[] Set focus to new view on switching between Tree <-> List views.
[] Update toolbar when view changes (List <-> Tree)
[] Set PWS title when opening a database at startup
[] Allow List view to process all characters e.g. Page Up/Down, Home, End,
Arrows etc.
[] Fix program crash on clicking CompareResults dialog header.

Changes to Existing Features in 3.12
====================================
[1846688] When generating a new password, it is no longer displayed in
a separate window for approval. If you want to generate another
password, just click on Generate again. If you want to revert to the
existing password when editing an entry, just click on Cancel.