@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003-2007 Rony Shapiro <ronys@users.sourceforge.net>.
+ * Copyright (c) 2003-2008 Rony Shapiro <ronys@users.sourceforge.net>.
  * All rights reserved. Use of the code is allowed under the
  * Artistic License 2.0 terms, as specified in the LICENSE file
  * distributed with this code, or available from
@@ -77,7 +77,7 @@ class PWSprefs {
   enum  StringPrefs {CurrentBackup, CurrentFile, LastView, DefaultUsername,
 		  TreeFont, BackupPrefixValue, BackupDir, AltBrowser, ListColumns,
       ColumnWidths, DefaultAutotypeString, AltBrowserCmdLineParms,
-      MainToolBarButtons, PasswordFont,
+      MainToolBarButtons, PasswordFont, TreeListSampleText, PswdSampleText,
 		  NumStringPrefs};
 
   // for DoubleClickAction
